# ComfyUI-PromptChain

./: .comfyignore  .gitignore  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  __init__.py  hierarchical_random.py  prompt_chain.py  pyproject.toml  requirements.txt  syntax_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
build-src/: codemirror-entry.mjs
bundled_packs/: _BUNDLED.txt
bundled_packs/ComfyUI-Frame-Interpolation/: LICENSE  __init__.py  config.yaml  other_nodes.py  pyproject.toml  vfi_utils.py
bundled_packs/ComfyUI-PuLID-Flux2/: requirements.txt
bundled_packs/ComfyUI-VAE-Utils/: LICENSE  __init__.py  nodes.py
bundled_packs/ComfyUI_PuLID_Flux_ll/: requirements.txt
bundled_packs/PuLID_ComfyUI/: requirements.txt
core/: civitai.py  compiler.py  crop_windows.py  extend_api.py  install_sections.py  lora_catalog.py  modal_setup_api.py  model_api.py  model_settings.py  node_install_api.py  pose_api.py  subject_api.py  system_api.py  tag_builder.py  tag_overlay.py  tag_search.py  template_api.py  thumbs.py  update_boot.py  upscale_api.py
data/loras/: krea2-styles.json
data/models/: ideogram_4.json  krea2_raw.json  krea2_turbo.json  wan_2_2_5b_5b.json  wan_2_2_5b_5b_gguf.json  wan_2_2_i2v_14b.json  wan_2_2_i2v_14b_gguf.json  wan_2_2_t2v_14b.json  wan_2_2_t2v_14b_gguf.json  z_image_base.json
data/prompts/: ideogram.json  krea2.json  wan-video.json
data/tag-builder/: nsfw-manifest.json
data/tags/: Derpibooru.csv  E621.csv
data/templates/: flux-t2i-regionbox.json  ideogram-t2i-regionbox.json  ideogram-t2i.json  krea2-raw-i2i-highdetail.json  krea2-raw-i2i.json  krea2-raw-t2i-highdetail.json  krea2-raw-t2i.json  krea2-turbo-i2i-highdetail.json  krea2-turbo-i2i.json  krea2-turbo-realism-i2i.json  krea2-turbo-realism-t2i.json  krea2-turbo-t2i-3d-regional.json  krea2-turbo-t2i-highdetail.json  krea2-turbo-t2i.json  sdxl-t2i-3d-regional.json  sdxl-t2i-regionbox.json  wan22-5b-i2v-gguf.json  wan22-5b-i2v.json  wan22-5b-t2v-gguf.json  wan22-5b-t2v.json  wan22-flf2v-fast.json  wan22-flf2v-gguf-fast.json  wan22-flf2v-gguf.json  wan22-flf2v.json  wan22-i2v-fast.json  wan22-i2v-gguf-fast.json  wan22-i2v-gguf.json  wan22-i2v.json  wan22-t2v-fast.json  wan22-t2v-gguf-fast.json  wan22-t2v-gguf.json  wan22-t2v.json  (+4 more)
docs/: RELICENSING.md
js/: codemirror.bundle.js  loadimage-editor.js  main.js  pose-studio.js  region-box.js
nodes/: attention_couple.py  attention_couple_zimage.py  ideogram_caption.py  ideogram_sampler.py  pose_studio.py  region_box.py  regional_detailer.py
scripts/: natlang_decompose_probe.py  natlang_scene_composer.py  port_v1_characters_to_v2.py  test_crop_windows.py  test_regions.py  validate_templates.py
svelte-src/: node-main.svelte.js  vite.config.js
web/: hierarchical_random.js
(+125 files in other folders)
